syntax = "proto3";

package io.evitadb.externalApi.grpc.generated;
option java_multiple_files = true;
option csharp_namespace = "EvitaDB";

import "GrpcEnums.proto";
import "GrpcLocalMutation.proto";
import "google/protobuf/wrappers.proto";

// Represents a terminal mutation that wraps a list of mutation that are to be performed on an entity.
message GrpcEntityUpsertMutation {
  // The type of the entity to be mutated.
  string entityType = 1;
  // The primary key of the entity to be mutated.
  google.protobuf.Int32Value entityPrimaryKey = 2;
  // Controls behaviour of the upsert operation.
  // - MUST_NOT_EXIST: use when you know you'll be inserting a new value
  // - MUST_EXIST: use when you know you'll be updating an existing value
  // - MAY_EXIST: use when you're not sure
  GrpcEntityExistence entityExistence = 3;
  // List of all local mutations that modify internal data of the entity.
  repeated GrpcLocalMutation mutations = 4;
}

// Represents a terminal mutation when existing entity is removed in the evitaDB. The entity is
// and all its internal data are deleted.
message GrpcEntityRemoveMutation {
  // The type of the entity to be removed.
  string entityType = 1;
  // The primary key of the entity to be removed.
  int32 entityPrimaryKey = 2;
}

// Represents a mutation to be performed on the evitaDB that relates to an entity.
message GrpcEntityMutation {
  // The mutation to be performed.
  oneof mutation {
    // Represents a terminal mutation that wraps a list of mutation that are to be performed on an entity.
    GrpcEntityUpsertMutation entityUpsertMutation = 1;
    // Represents a terminal mutation when existing entity is removed in the evitaDB. The entity with all its internal data are deleted.
    GrpcEntityRemoveMutation entityRemoveMutation = 2;
  }
}